<resources>
    <string name="app_name">Together School</string>
    <string name="text_email">Email</string>
    <string name="text_password">Mot de passe</string>
    <string name="text_no_account">Vous n\'avez pas encore de compte ?</string>
    <string name="text_creer">Créer</string>

    <string name="description_app_logo">Logo de l\'application</string>
    <string name="text_connexion">Connexion</string>
    <string name="btn_text_se_connecter">Se connecter</string>
    <string name="text_choisir">Choisir</string>
    <string name="text_new_account">Nouveau compte</string>
    <string name="text_s_enregistrer">S\'enregistrer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Ouvrir le menu</string>
    <string name="close_nav">Fermer le menu</string>
    <string name="text_username">Nom d\'utilisateur</string>
    <string name="text_vos_cours">Tout vos cours</string>
    <string name="cours_name_dev">Developpement d\'applications mobiles</string>
    <string name="cours_name_coo">Conception orientée objet</string>
    <string name="text_edit_accoutn">Modifier mon compte</string>
    <string name="text_desactiver">Supprimer mon compte</string>


</resources>