<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/messageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:src="@drawable/message_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/text_vos_cours"
            android:textSize="20dp"
            android:textStyle="bold"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:isScrollContainer="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.069">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_dev"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_coo"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_dev"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_coo"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_dev"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_coo"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_dev"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_coo"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_dev"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_coo"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_dev"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/cours_name_coo"
                android:textSize="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_bg"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>